--- a/Halan/css/font.css
+++ b/Halan/css/font.css
@@ -1,10 +1,7 @@
 @font-face {
   font-family: 'Avenir-Black';
   src: url('Avenir-Black.eot');
-  src: url('Avenir-Black.woff2') format('woff2'),
-       url('Avenir-Black.woff') format('woff'),
-       url('Avenir-Black.ttf') format('truetype'),
-       url('Avenir-Black.svg#Avenir-Black') format('svg'),
+  src: url('Avenir-Black.svg#Avenir-Black') format('svg'),
        url('Avenir-Black.eot?#iefix') format('embedded-opentype');
   font-weight: normal;
   font-style: normal;
@@ -141,4 +138,3 @@
   font-weight: normal;
   font-style: normal;
 }
-
