--- a/Halan/css/reset.css
+++ b/Halan/css/reset.css
@@ -40,3 +40,59 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+a {
+  text-decoration: none;
+  color: #fff;
+}
+
+h1 {
+  font-family: Avenir-Black;
+  font-size: 64px;
+  line-height: 1.33;
+}
+
+h2 {
+  font-family: Avenir-Black;
+  font-size: 36px;
+  color: #fff;
+}
+
+h3 {
+  font-family: Avenir-Black;
+  font-size: 18px;
+  color: #fff;
+}
+
+h4 {
+  font-family: Avenir-Black;
+  font-size: 14px;
+}
+
+h5 {
+  font-family: Avenir-Black;
+  font-size: 12px;
+  color: #313131;
+}
+
+h6 {
+  font-family: Avenir-Black;
+  font-size: 10px;
+  color: #fff;
+}
+
+p {
+  font-family: Avenir-Book;
+	font-size: 14px;
+	line-height: 1.71;
+	text-align: left;
+  color: #fff;
+}
+
+select:focus {
+  outline: none;
+}
+
+input:focus {
+  outline: none;
+}
