--- a/Halan/css/information.css
+++ b/Halan/css/information.css
@@ -2,6 +2,10 @@ body {
   padding: 40px 72px;
 }
 
+h5 {
+  margin-bottom: 10px;
+}
+
 #particles-js canvas {
     display: block;
     vertical-align: bottom;
@@ -62,13 +66,13 @@ body {
 .stepSeparator1 {
   width: 120px;
   height: 1px;
-  background-color: #808080;
+  background-color: #221BE6;
 }
 
 .stepSeparator2 {
   width: 120px;
   height: 1px;
-  background-color: #808080;
+  background-color: #221BE6;
 }
 
 .step {
@@ -79,70 +83,66 @@ body {
   color: #221BE6;
 }
 
+.step2 {
+  color: #221BE6;
+}
+
+.step3 {
+  color: #221BE6;
+}
+
 .title {
   text-align: center;
   margin-bottom: 40px;
 }
 
-.planetsContainer {
+.mainContainer {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
+  width: 100%;
+  height: 350px;
+}
+
+.informationForm {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.inputContainer {
+  margin-bottom: 24px;
 }
 
 .gridContainer {
   display: grid;
   width: 100%;
-  grid-template-columns: repeat(6, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   grid-gap: 24px;
   margin-bottom: 50px;
 }
 
-.gridItem {
+
+.previousButton {
   width: 196px;
-  height: 196px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-}
-
-.planetButton {
-  visibility: hidden;
-  cursor: pointer;
-  position: absolute;
-}
-
-.planetCell {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.planetButton:checked + .gridItem {
-  background: #221BE6;
-  -webkit-box-shadow: 0px 0px 20px 0px rgba(34,27,230,0.8);
-  -moz-box-shadow: 0px 0px 20px 0px rgba(34,27,230,0.8);
-  box-shadow: 0px 0px 20px 0px rgba(34,27,230,0.8);
-}
-
-.planetImg {
-  width: 150px;
-  height: auto;
-  margin-bottom: 10px;
-}
-
-.planetLabel {
+  height: 50px;
+  background-color: transparent;
+  outline: none;
+  border: 2px solid #221BE6;
   font-family: Avenir-Black;
+  font-size: 14px;
   color: #fff;
-  font-size: 12px;
+  cursor: pointer;
+  box-shadow: inset 0 0 0 0 #221BE6;
+  -webkit-transition: ease-out 0.3s;
+  -moz-transition: ease-out 0.3s;
+  transition: ease-out 0.3s;
+  margin-top: 40px;
+  margin-right: 12px;
 }
 
-.buttonContainer {
-  display: flex;
-  justify-content: center;
+.previousButton:hover {
+  box-shadow: inset -200px 0 0 0 #221BE6;
 }
 
 .continueButton {
@@ -162,6 +162,8 @@ body {
   -webkit-transition: .3s;
   -moz-transition: .3s;
   -o-transition: .3s;
+  margin-top: 40px;
+  margin-left: 12px;
 }
 
 .continueButton:hover {
