--- a/Halan/css/information.css
+++ b/Halan/css/information.css
@@ -110,18 +110,75 @@ h5 {
   align-items: center;
 }
 
+.select-wrapper {
+  position: relative;
+  width: 100%;
+  border: 2px solid #221BE6;
+}
+
+.select-wrapper select {
+  color: #fff;
+  font-family: Avenir-Book;
+  font-size: 12px;
+  width: 100%;
+  height: 40px;
+  padding: 8px 0 8px 15px;
+  background: transparent;
+  border: 0;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+
+.select-wrapper select::-ms-expand{
+  display: none;
+}
+
+.select-arrow {
+  position: absolute;
+  z-index: -9999;
+  border: 6px solid transparent;
+  border-bottom: 0;
+  right: 15px;
+}
+
 .inputContainer {
   margin-bottom: 24px;
+  width: 416px;
 }
 
-.gridContainer {
-  display: grid;
+.textInput {
   width: 100%;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 24px;
+  height: 40px;
+  padding: 8px 0 8px 15px;
+  border: 2px solid #221BE6;
+  background: transparent;
+  box-sizing:border-box;
+  font-family: Avenir-Book;
+  font-size: 12px;
+  color: #fff;
+}
+
+.numberContainer {
+  margin-bottom: 24px;
+  width: 416px;
+}
+
+.numberInput {
+  width: 100%;
+  height: 40px;
+  padding: 8px 0 8px 15px;
+  border: 2px solid #221BE6;
+  background: transparent;
+  box-sizing:border-box;
+  font-family: Avenir-Book;
+  font-size: 12px;
+  color: #fff;
+}
+
+.buttonContainer {
   margin-bottom: 50px;
 }
-
 
 .previousButton {
   width: 196px;
