--- a/Halan/css/success.css
+++ b/Halan/css/success.css
@@ -60,6 +60,29 @@ h2 {
   margin-bottom: 40px;
 }
 
+.cancelButton {
+	margin-top: 10px;
+	width: 196px;
+	height: 50px;
+	background-color: #221BE6;
+	outline: none;
+	border: none;
+	-webkit-box-shadow: 0px 0px 20px 0px rgba(34,27,230,0.8);
+	-moz-box-shadow: 0px 0px 20px 0px rgba(34,27,230,0.8);
+	box-shadow: 0px 0px 20px 0px rgba(34,27,230,0.8);
+	font-family: Avenir-Black;
+	font-size: 14px;
+	color: #fff;
+	cursor: pointer;
+	transition: .3s;
+	-webkit-transition: .3s;
+	-moz-transition: .3s;
+	-o-transition: .3s;
+}
+
+.cancelButton:hover {
+	background-color: #332DF1;
+}
 
 
 .rocket{
